testsuite/tests/typecheck/should_fail/T17139.stderr

T17139.hs:15:16: error:
    • Found hole: _ :: (a -> b0) -> f a -> TypeFam f b0
      Where: ‘b0’ is an ambiguous type variable
             ‘a’, ‘f’ are rigid type variables bound by
               the type signature for:
                 lift :: forall a b (f :: * -> *). (a -> b) -> TypeFam f (a -> b)
               at T17139.hs:14:1-38
    • In the expression: _ (f <*> x)
      The lambda expression ‘\ x -> _ (f <*> x)’ has one value argument,
        but its type ‘TypeFam f (a -> b)’ has none
      In the expression: \ x -> _ (f <*> x)
    • Relevant bindings include
        x :: a -> a (bound at T17139.hs:15:11)
        f :: a -> b (bound at T17139.hs:15:6)
        lift :: (a -> b) -> TypeFam f (a -> b) (bound at T17139.hs:15:1)

T17139.hs:15:19: error:
    • Couldn't match type ‘b’ with ‘a -> b0’
      Expected: a -> a -> b0
        Actual: a -> b
      ‘b’ is a rigid type variable bound by
        the type signature for:
          lift :: forall a b (f :: * -> *). (a -> b) -> TypeFam f (a -> b)
        at T17139.hs:14:1-38
    • In the first argument of ‘(<*>)’, namely ‘f’
      In the first argument of ‘_’, namely ‘(f <*> x)’
      In the expression: _ (f <*> x)
    • Relevant bindings include
        x :: a -> a (bound at T17139.hs:15:11)
        f :: a -> b (bound at T17139.hs:15:6)
        lift :: (a -> b) -> TypeFam f (a -> b) (bound at T17139.hs:15:1)
